--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,29 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'space_grotesklight';
+  src: url('assets/spacegrotesk-variablefont_wght-webfont.woff2') format('woff2'),
+       url('assets/spacegrotesk-variablefont_wght-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   background-color: lightblue;
+  color: navy;
+  font-family: 'space_grotesklight', sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1em;
+}
+
+.hint {
+  margin: 0 1em;
 }
 
 .card-container {
